2007-02-19  Konstantin Triger <kostat@mainsoft.com>

	* XmlDataReader.cs, XmlDataInferenceLoader.cs, XmlDiffLoader.cs:
		ignore attributes from "http://www.w3.org/XML/1998/namespace".
	* XmlConstants.cs: add constant for "http://www.w3.org/XML/1998/namespace".
	* XmlDataInferenceLoader.cs: track the added elements index to fix the
		added column ordinal.

2006-12-11  Chris Toshok  <toshok@ximian.com>

	* DataView.cs: GetItemProperties should return an empty collection
	if we have no data table.  Presently we NRE.

2006-12-08  Nagappan A  <anagappan@novell.com>

	* DataTable.cs (ReadXml): Removed if condition, as it should not
	check the exception string.

2006-12-07  Chris Toshok  <toshok@ximian.com>

	* DataView.cs: add CollectionChangeEventHandler's on the
	ChildRelations and ParentRelations collections, and emit
	ListChanged events with PropertyDescriptor.Added/Deleted/Changed
	in response.

2006-12-07  Nagappan A  <anagappan@novell.com>

	* DataTable.cs (ReadXml): Integrated the implementation of
	ReadXml, patch provided by deepak_2603@yahoo.com.

2006-12-05  Nagappan A  <anagappan@novell.com>

	* DataTable.cs (WriteXmlSchema): Using XmlTextWriter instead of
	XmlWriter, solved the File Sharing IO Exception.

2006-11-28 	Hubert FONGARNAND, FrÃ©dÃ©ric Mestayer <informatique.internet@fiducial.fr>

	* DataColumnCollection.cs : Improved Column searching when not
	using exact column name (case sensitivity). Fixes bug # 80075.

2006-11-28  Nagappan A  <anagappan@novell.com>

	* XmlSchemaDataImporter.cs: Fixed 2.0 profile compilation
	warnings. Using AttributeSchemaType instead of AttributeType and
	ElementSchemaType instead of ElementType.

	* TypedDataSetGenerator.cs: Modified the profile check from
	!NET_1_1 to !NET_1_0, as this class is obsolete from 1.1 profile.

	* DataRelationCollection.cs (Item): Modified the property Item as
	abstract and implemented it in DataSetRelationCollection and
	DataTableRelationCollection classes.
