@@ -1,3 +1,7 @@
+2007-02-20  Konstantin Triger <kostat@mainsoft.com>
+
+	* XmlSchemaDataImporter.cs: ensure the tables are created in document order.
+
 2007-02-19  Konstantin Triger <kostat@mainsoft.com>
 
 	* XmlDataReader.cs, XmlDataInferenceLoader.cs, XmlDiffLoader.cs:
